// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- No data provided. should shown 1`] = `
<div
  className="extra-menu with-2-items"
>
  <div
    className="dropdown"
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-link btn-sm"
      disabled={false}
      id="dropdown-basic"
      onClick={[Function]}
      type="button"
    >
      <svg
        data-icon="ellipsis-h"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`2- Wallet data and contact data provided. should render null  1`] = `null`;

exports[`3- Contact provided but wallets. should shown 1`] = `
<div
  className="extra-menu with-1-items"
>
  <div
    className="dropdown"
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-link btn-sm"
      disabled={false}
      id="dropdown-basic"
      onClick={[Function]}
      type="button"
    >
      <svg
        data-icon="ellipsis-h"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`4- undefined contact data. for backward compability. should shown 1`] = `
<div
  className="extra-menu with-1-items"
>
  <div
    className="dropdown"
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-link btn-sm"
      disabled={false}
      id="dropdown-basic"
      onClick={[Function]}
      type="button"
    >
      <svg
        data-icon="ellipsis-h"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M328 256c0 39.8-32.2 72-72 72s-72-32.2-72-72 32.2-72 72-72 72 32.2 72 72zm104-72c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72zm-352 0c-39.8 0-72 32.2-72 72s32.2 72 72 72 72-32.2 72-72-32.2-72-72-72z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;
